fixed minor misalignment of product info

--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -11,10 +11,7 @@
       align-items: center;
       justify-content: center;
       max-height: calc(100% - 3rem);
-    }
-
-    .product-info {
-      margin-top: 4px;
+      padding-bottom: 4px;
     }
   }
 
